config-applications/projectname-dev/dev-projectname-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: projectname-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: dev-projectname-api.<insert domain name>.com
    http:
      paths:
      - path: /
        backend:
          serviceName: projectname-api
          servicePort: 3000
  - host: dev-projectname-web.<insert domain name>.com
    http:
      paths:
      - path: /
        backend:
          serviceName: projectname-web
          servicePort: 3000
